@@ -3,19 +3,18 @@ package com.watayouxiang.newjdk.jdk8;
 import java.util.Optional;
 
 /**
-Optional 类是一个可以为null的容器对象。如果值存在则isPresent()方法会返回true，调用get()方法会返回该对象。
-Optional 是个容器：它可以保存类型T的值，或者仅仅保存null。Optional提供很多有用的方法，这样我们就不用显式进行空值检测。
-Optional 类的引入很好的解决空指针异常。
-
-以下是一个 java.util.Optional<T> 类的声明：
-    public final class Optional<T> extends Object
-
+ * Optional 类是一个可以为null的容器对象。如果值存在则isPresent()方法会返回true，调用get()方法会返回该对象。
+ * Optional 是个容器：它可以保存类型T的值，或者仅仅保存null。Optional提供很多有用的方法，这样我们就不用显式进行空值检测。
+ * Optional 类的引入很好的解决空指针异常。
+ * <p>
+ * 以下是一个 java.util.Optional<T> 类的声明：
+ * public final class Optional<T> extends Object
  */
 public class Java8_06Optional类 {
 
     public static void main(String[] args) {
         Integer value1 = null;
-        Integer value2 = new Integer(10);
+        Integer value2 = Integer.valueOf(10);
 
         // Optional.ofNullable - 允许传递为 null 参数
         Optional<Integer> a = Optional.ofNullable(value1);
@@ -32,7 +31,7 @@ public class Java8_06Optional类 {
         System.out.println("第二个参数值存在: " + b.isPresent());
 
         // Optional.orElse - 如果值存在，返回它，否则返回默认值
-        Integer value1 = a.orElse(new Integer(0));
+        Integer value1 = a.orElse(Integer.valueOf(0));
 
         //Optional.get - 获取值，值需要存在
         Integer value2 = b.get();
